<resources>
    <string name="app_name">CondoAssist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="request_perm">Please enable all permissions</string>
    <string name="google_maps_key">AIzaSyCadq6PjIZ8iLD6sMnBZ3tau4Flr-RVsjU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="deal_list">Deals</string>
    <string name="available_credits">Credits</string>
    <string name="credit_balance">Credit Balance</string>
    <string name="New">Latest</string>
    <string name="a_z">All</string>
    <string name="nearby">Nearby</string>
    <string name="please_wait">Please wait...</string>
    <string name="search">Search</string>
    <string name="nodata">No Data Found</string>
    <string name="location">Location</string>
    <string name="hightlights">HIGHLIGHTS</string>
    <string name="description">DESCRIPTION</string>
    <string name="redeem_now">REDEEM</string>
    <string name="discount">Discount </string>
    <string name="credit_point">Credit Points</string>
    <string name="time_left"> Time Remaining</string>
    <string name="share">"Share this on  " </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">Log In</string>
    <string name="print">Confirm Redemption</string>
    <string name="cancel">Cancel</string>
    <string name="redeemnow">Redeem Now</string>
    <string name="welcome">Welcome</string>
    <string name="rewardpoints">Reward Points  </string>
    <string name="purchase">Purchase</string>
    <string name="credits">Credits</string>
    <string name="coupon_qty">Coupon QTY</string>
    <string name="total_credits">Total Credits</string>
    <string name="submit">Submit</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="my_coupons">My Coupons</string>
    <string name="transaction_history">Transaction History</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="coupon_holder_name">Coupon Holder Name</string>
    <string name="coupon_xtend_username">Merchant Name</string>
    <string name="colon">" : "</string>
    <string name="date_of_printing">Date of Printing</string>
    <string name="coupon_holder_email">Account Holder</string>
    <string name="terms_and_conditions">Terms And Conditions :</string>
    <string name="redeem_again">Redeem Again</string>
    <string name="transaction_id">Code</string>
    <string name="time">Date and Time</string>
    <string name="myr">MYR</string>
    <string name="names">Name</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="terms">"By registering you agree to the <u>Terms of Service</u> and <u>Privacy Policy</u>"</string>
    <string name="phone">Mobile</string>
    <string name="coupon_details">Coupon Details</string>
    <string name="serial">Serial</string>
    <string name="logout">Logout</string>
    <string name="terms_condition">TERMS AND CONDITIONS </string>
    <string name="emailval">Enter the email id</string>
    <string name="emailidval">Enter the valid email id</string>
    <string name="passval1">Enter the password</string>
    <string name="passval2">Password length should be minimum 4 characters</string>
    <string name="loginsuccess"> Logged in Successfully</string>
    <string name="loginerror"> Something went wrong. Please try again.</string>
    <string name="sharesuccess"> Shared Successfully</string>
    <string name="shareerror"> Share Failed</string>
    <string name="dealnor">Deal not available to purchase</string>
    <string name="dealminerror">You should enter minimum deal quantity</string>
    <string name="deallimiterror">Deal limit exceeds. Your available deal quantity is</string>
    <string name="coupongreatererror">Coupon quantity must be greater than zero</string>
    <string name="couponval"> Enter the coupon quantity</string>
    <string name="statedrop"> Select City</string>
    <string name="statedrop1"> Select State</string>
    <string name="citydrop1"> Select City</string>
    <string name="marchantdrop"> Select Merchant</string>
    <string name="shoppingname"> Select Shoping Name</string>
    <string name="categorydrop"> Select Category</string>
    <string name="nameval"> Enter the name</string>
    <string name="passval"> Enter your password</string>
    <string name="interneterror1"> Check your internet connection.</string>
    <string name="accptval"> Agree the Terms of service and Privacy Policy.</string>
    <string name="countryval"> Please Select your country</string>
    <string name="cityval">Please Select your city</string>
    <string name="pleasewait">"Please wait..."</string>
    <string name="home">HOME</string>
    <string name="search1">SEARCH</string>
    <string name="mycoupon">MY COUPON</string>
    <string name="setting">Settings</string>
    <string name="plocyteam">Privacy Policy </string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="profile">Profile</string>
    <string name="by_registering_you_agree_to_the">By registering you agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="receive_updates_on_latest_promotion_or_deals_via_email_from_this_site">Receive updates on latest promotion or deals via email from this site</string>
    <string name="sign_up">Sign Up</string>
    <string name="privacy_policy_">Privacy Policy.</string>
    <string name="and">and</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="address1">Address1</string>
    <string name="address_2">Address 2</string>
    <string name="editprofile">Edit Profile</string>
</resources>